--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Document</title>
-</head>
-<body>
-    
-<script src="./assets/js/script.js"></script>
-</body>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="" alt="Logo de la Pagina" />
+      </div>
+      <div>
+        <ul>
+          <li><a href="http://">Inicio</a></li>
+          <li><a href="http://">Turismo</a></li>
+          <li><a href="http://">Guias</a></li>
+          <li><a href="http://">Acceder</a></li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <div>
+        <img src="" alt="Imagen de Fondo" />
+        <h1>Bienvenidos a ......</h1>
+        <h3>Tu mejor destino</h3>
+        <!-- Formulario de búsqueda -->
+        <form id="formulario-busqueda">
+          <input type="text" id="input-busqueda"  name="que"   placeholder="¿Qué estás buscando?" />
+          <button type="submit" id="search-button"> <img src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png" alt="Buscar"/> </button>
+        </form>
+      </div>
+      <div></div>
+    </main>
+    <footer></footer>
+
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
