cambios en las cosas de Dario en la rama de Cesar Error mio(Dario)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <main>
-      <div>
+      <div class="index-contenedor-">
         <img src="" alt="Imagen de Fondo" />
         <h1>Bienvenidos a ......</h1>
         <h3>Tu mejor destino</h3>
@@ -31,10 +31,13 @@
           <button type="submit" id="search-button"> <img src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png" alt="Buscar"/> </button>
         </form>
       </div>
-      <div></div>
+      <div id="index-contenedor-resultados">
+        
+
+      </div>
     </main>
     <footer></footer>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/dario.js"></script>
   </body>
 </html>
