Agreganmdo opciones y creando lo que seria la primera pagina index con algunas de sus funcionalidades

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="" alt="Logo de la Pagina" />
+      <div class="contenedor-imagen-header">
+        <img src="./assets/images/cerrode7colores.jpg" alt="Logo de la Pagina" />
       </div>
-      <div>
+      <div class="contenedor-link-header">
         <ul>
           <li><a href="http://">Inicio</a></li>
           <li><a href="http://">Turismo</a></li>
@@ -21,13 +21,15 @@
       </div>
     </header>
     <main>
-      <div class="index-contenedor-">
-        <img src="" alt="Imagen de Fondo" />
+      <div class="index-contenedor-buscador">
+        <div class="index-contenedor-fondo">
+          <img src="./assets/images/paredonesdeyala.jpg" alt="Imagen de Fondo" />
+        </div>
         <h1>Bienvenidos a ......</h1>
         <h3>Tu mejor destino</h3>
         <!-- Formulario de búsqueda -->
-        <form id="formulario-busqueda">
-          <input type="text" id="input-busqueda"  name="que"   placeholder="¿Qué estás buscando?" />
+        <form id="index-formulario-busqueda">
+          <input type="text" id="index-input-busqueda"  name="que"   placeholder="¿Qué estás buscando?" />
           <button type="submit" id="search-button"> <img src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png" alt="Buscar"/> </button>
         </form>
       </div>
