al fin un commit desde mi rama actualizando para probar el 2WC

--- a/index.html
+++ b/index.html
@@ -35,10 +35,31 @@
       </div>
       <div id="index-contenedor-resultados">
         
-
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <img src="" alt="Logo de la pagina">
+        <form id="form-subscribete">
+          <input type="text" id="index-input-busqueda"  name="que"   placeholder="Correo Electronico" />
+          <button type="submit" id="search-button"> Subcribirse </button>
+        </form>
+      </div>
+      <div>
+        <h4>Contacto</h4>
+        <ul>
+          <li>WhatsApp +543885273263</li>
+          <li>Correo bdidominguez@gmail.com</li>
+        </ul>
+        <h4>Redes Sociales</h4>
+        <ul>
+          <li>linkedin</li>
+          <li>Youtube</li>
+          <li>Facebook</li>
+          <li>Instagram</li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="./assets/js/dario.js"></script>
   </body>
