--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       </div>
       <div class="contenedor-link-header">
         <ul>
-          <li><a href="http://">Inicio</a></li>
-          <li><a href="http://">Turismo</a></li>
-          <li><a href="http://">Guias</a></li>
-          <li><a href="http://">Acceder</a></li>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./pages/turismo.html">Turismo</a></li>
+          <li><a href="./pages/guias.html">Guias</a></li>
+          <li><a href="./pages/acceder.html">Acceder</a></li>
         </ul>
       </div>
     </header>
@@ -39,9 +39,9 @@
     </main>
     <footer>
       <div>
-        <img src="" alt="Logo de la pagina">
+        <img src="./assets/images/cerrode7colores.jpg" alt="Logo de la pagina">
         <form id="form-subscribete">
-          <input type="text" id="index-input-busqueda"  name="que"   placeholder="Correo Electronico" />
+          <input type="text" id="text-subscribir"  name="subcribete" placeholder="Correo Electronico"/>
           <button type="submit" id="search-button"> Subcribirse </button>
         </form>
       </div>
