Agregando estructura página restaurantes

--- a/pages/restaurantes.html
+++ b/pages/restaurantes.html
@@ -55,36 +55,52 @@
         </div>
         <div>
           <a href="#">Frenessí Buenos Aires</a>
+          <span>Valoración: 1</span>
+          <span>+ 54 11 3666-8510</span>
+          <span></span>
+          <p>Calle Habana 3499, Buenos Aires C1419GQA Argentina</p>
         </div>
       </div>
 
       <div>
         <div>
-          <img src="/assets/images/restaurants/frenessi-buenos-aires.jpg" alt="Frenessí Buenos Aires">
+          <img src="/assets/images/restaurants/vive-cafe.jpg" alt="Vive Café Buenos Aires">
         </div>
         <div>
-          <a href="#">Frenessí Buenos Aires</a>
+          <a href="#">Vive Café</a>
+          <span>Valoración: 1</span>
+          <span>+ 54 11 3666-8510</span>
+          <span></span>
+          <p>Calle Habana 3499, Buenos Aires C1419GQA Argentina</p>
         </div>
       </div>
 
       <div>
         <div>
-          <img src="/assets/images/restaurants/frenessi-buenos-aires.jpg" alt="Frenessí Buenos Aires">
+          <img src="/assets/images/restaurants/4ta-pared.jpg" alt="4ta Pard">
         </div>
         <div>
-          <a href="#">Frenessí Buenos Aires</a>
+          <a href="#">4ta Pared</a>
+          <span>Valoración: 1</span>
+          <span>+ 54 11 3666-8510</span>
+          <span></span>
+          <p>Calle Habana 3499, Buenos Aires C1419GQA Argentina</p>
         </div>
       </div>
 
-
       <div>
         <div>
-          <img src="/assets/images/restaurants/frenessi-buenos-aires.jpg" alt="Frenessí Buenos Aires">
+          <img src="/assets/images/restaurants/criolla-cooking-y-wine.jpg" alt="Frenessí Buenos Aires">
         </div>
         <div>
-          <a href="#">Frenessí Buenos Aires</a>
+          <a href="#">Cooking & Wine</a>
+          <span>Valoración: 1</span>
+          <span>+ 54 11 3666-8510</span>
+          <span></span>
+          <p>Calle Habana 3499, Buenos Aires C1419GQA Argentina</p>
         </div>
       </div>
     </main>
+    <!-- fin de tarjetas restaurantes -->
 </body>
 </html>
