--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       </div>
       <div class="contenedor-link-header">
         <ul>
-          <li><a href="http://">Inicio</a></li>
-          <li><a href="http://">Turismo</a></li>
-          <li><a href="http://">Guias</a></li>
-          <li><a href="http://">Acceder</a></li>
+          <li><a href="index.html">Inicio</a></li>
+                <li><a href=".\pages\turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
+                <li><a href="#">Guias</a></li>
+                <li><a href="#">Acceder</a></li>
         </ul>
       </div>
     </header>
