--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script src="./assets/js/index.js" type="module"></script>  
     <title>Document</title>
   </head>
   <body>
@@ -35,14 +36,14 @@
         <h1>Bienvenidos a ......</h1>
         <h3>Tu mejor destino</h3>
         <!-- Formulario de búsqueda -->
-        <form id="index-formulario-busqueda" onsubmit="metodoDeBusquedaIndex(event)">
+        <form id="index-formulario-busqueda" >
           <input
             type="text"
             id="index-input-busqueda"
             name="que"
             placeholder="¿Qué estás buscando?"
           />
-          <button type="submit" id="search-button">
+          <button type="button" id="search-button" onclick="algo()">
             <img
               src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"
               alt="Buscar"
@@ -81,6 +82,16 @@
       </div>
     </footer>
     
-    <script src="./assets/js/dario.js"></script>
+    
+   
+    <!-- 
+    <script src="./assets/js/principal.js" defer type="module"></script>
+    <script src="./assets/js/dario.js" defer type="module"></script>
+    -->
+    <!-- 
+    <script src="./assets/js/principal.js" type="text/javascript"></script>
+    <script src="./assets/js/dario.js" type="text/javascript"></script>
+    -->
   </body>
+  
 </html>
