--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             name="que"
             placeholder="¿Qué estás buscando?"
           />
-          <button type="button" id="search-button" onclick="algo()">
+          <button type="button" id="search-button">
             <img
               src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"
               alt="Buscar"
