--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
-    <script src="../assets/js/index.js" type="module"></script> 
+    <script src="../assets/js/registrar.js" type="module"></script> 
     <title>Alta de Usuario Nuevo</title>
   </head>
   <body>
