--- a/index.html
+++ b/index.html
@@ -54,26 +54,27 @@
       <div id="index-contenedor-resultados"></div>
     </main>
     <footer>
-      <div>
+      <div class="footer-primer-contenedor">
         <img src="https://i.ibb.co/hcxRSj9/Index-png.png" alt="Logo de la pagina" />
         <form id="form-subscribete">
           <input
-            type="text"
-            id="text-subscribir"
+            type="email"
+            id="footer-text-subscribir"
             name="subcribete"
             placeholder="Correo Electronico"
+            required
           />
           <button type="submit" id="search-button">Subcribirse</button>
         </form>
       </div>
-      <div>
+      <div class="footer-segundo-contenedor">
         <h4>Contacto</h4>
-        <ul>
-          <li>WhatsApp +543885273263</li>
-          <li>Correo bdidominguez@gmail.com</li>
+        <ul class="footer-contacto">
+          <li>WhatsApp: +543885273263</li>
+          <li>Correo:  bdidominguez@gmail.com</li>
         </ul>
         <h4>Redes Sociales</h4>
-        <ul>
+        <ul class="footer-redes-sociales">
           <li>linkedin</li>
           <li>Youtube</li>
           <li>Facebook</li>
@@ -81,17 +82,6 @@
         </ul>
       </div>
     </footer>
-    
-    
-   
-    <!-- 
-    <script src="./assets/js/principal.js" defer type="module"></script>
-    <script src="./assets/js/dario.js" defer type="module"></script>
-    -->
-    <!-- 
-    <script src="./assets/js/principal.js" type="text/javascript"></script>
-    <script src="./assets/js/dario.js" type="text/javascript"></script>
-    -->
   </body>
   
 </html>
