--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <div class="contenedor-link-header">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-                <li><a href=".\pages\turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
-                <li><a href="#">Guias</a></li>
-                <li><a href="#">Acceder</a></li>
+                <li><a href=".\pages\turismo.html">Comparte tu aventura</a></li> <!-- Cambiado aquí -->
+                <li><a href="#">Los mejores guias locales</a></li>
+                <li><a href="#">Acceso a tu cuenta </a></li>
         </ul>
       </div>
     </header>
