Creo que termine lo que serian los script

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="index-main">
       <div class="index-contenedor-buscador">
         <div class="index-contenedor-fondo">
           <img
@@ -64,7 +64,7 @@
             placeholder="Correo Electronico"
             required
           />
-          <button type="submit" id="search-button">Subcribirse</button>
+          <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
         </form>
       </div>
       <div class="footer-segundo-contenedor">
