--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contanos tu experiencia</title>
-    <link rel="stylesheet" href="./assets/css/turismo_styles.css"> <!-- Enlace al CSS específico de turismo.html -->
+    <link rel="stylesheet" href="../assets/css/styles.css"> <!-- Enlace al CSS específico de turismo.html -->
 </head>
 <body>
     <div class="container">
@@ -38,6 +38,6 @@
         </form>
     </div>
 
-    <script src="./assets/js/adriana.js"></script>
+    <script src="./assets/js/adriana1.js"></script>
 </body>
 </html>
