--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -38,6 +38,6 @@
         </form>
     </div>
 
-    <script src="./assets/js/adriana1.js"></script>
+    <script src="../assets/js/adriana1.js"></script>
 </body>
 </html>
