--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <div class="contenedor-link-header">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-                <li><a href=".\pages\turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
-                <li><a href="#">Guias</a></li>
-                <li><a href="#">Acceder</a></li>
+                <li><a href="./pages/turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
+                <li><a href="./pages/registrar.html">Registrar</a></li> <!-- Cambiado aquí -->
+                <li><a href="./pages/guias.html">Guias</a></li>   
+                <li><a href="./pages/restaurantes.html">Restaurantes</a></li>             
+                <li><a href="./pages/acceder.html">Acceder</a></li>
         </ul>
       </div>
     </header>
@@ -32,6 +34,8 @@
             alt="Imagen de Fondo"
           />
         </div>
+
+        
         <h1>Bienvenidos a ......</h1>
         <h3>Tu mejor destino</h3>
         <!-- Formulario de búsqueda -->
