--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Contanos tu experiencia</h1>
+
+        <!-- Contenedor para el formulario -->
+      <!--<div id="formulario-container" style="display: none;"> -->
         <form id="formulario">
             <label for="nombre">Nombre del Sitio:</label>
             <input type="text" id="nombre" required>
@@ -37,6 +40,13 @@
             <button type="button" id="guardarDatos">Guardar Datos</button>
         </form>
 
+      </div>
+
+      <!-- Contenedor para mensaje de acceso denegado -->
+    <!--  <div id="access-denied-message" style="display: none;">
+        <p>Acceso denegado. Por favor, <a href="./acceder.html">inicie sesión</a> para agregar información.</p>
+    </div>-->
+      
         <!-- Contenedor para mostrar los puntos turísticos -->
         <div id="contenedor-puntos"></div>
     </div>
