--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
-    <script src="../assets/js/registrar.js" type="module"></script> 
-    <title>Alta de Usuario Nuevo</title>
+    <script src="../assets/js/header.js" defer></script> <!-- Script para cargar el header -->
+      <title>Alta de Usuario Nuevo</title>
   </head>
   <body>
+  </head>
+  <body>
+    <header>
+      <div class="contenedor-imagen-header">
+        <img
+          src="./assets/images/cerrode7colores.jpg"
+          alt="Logo de la Pagina"
+        />
+      </div>
+      <div class="contenedor-link-header">
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+                <li><a href="./pages/turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
+                <li><a href="./pages/registrar.html">Registrar</a></li> <!-- Cambiado aquí -->
+                <li><a href="./pages/guias.html">Guias</a></li>   
+                <li><a href="./pages/restaurantes.html">Restaurantes</a></li>             
+                <li><a href="./pages/acceder.html">Acceder</a></li>
+        </ul>
+      </div>
+    </header>
     <main>
       <div class="registrar-contenedor-buscador">
         <!-- <a href="https://ibb.co/8MPLpzp"><img src="https://i.ibb.co/8MPLpzp/imagen.jpg" alt="imagen" border="0"></a> -->
@@ -63,5 +83,6 @@
       </div>
     </main>
     <!-- <script src="../assets/js/dario.js"></script> -->
+    <script src="../assets/js/registrar.js" defer></script> 
   </body>
 </html>
