--- a/index.html
+++ b/index.html
@@ -1,86 +1,57 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script src="./assets/js/index.js" type="module"></script>  
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="contenedor-imagen-header">
-        <img
-          src="./assets/images/cerrode7colores.jpg"
-          alt="Logo de la Pagina"
-        />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <script src="./assets/js/header.js" defer></script> <!-- Script para cargar el header -->
+  <script src="./assets/js/index.js" type="module" defer></script> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
+  <title>Document</title>
+</head>
+<body>
+  <header></header> <!-- El contenido del header se cargará aquí -->
+  <main class="index-main">
+    <div class="index-contenedor-buscador">
+      <div class="index-contenedor-fondo">
+        <img src="/assets/images/paredonesdeyala.jpg" alt="Imagen de Fondo" />
       </div>
-      <div class="contenedor-link-header">
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-                <li><a href=".\pages\turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
-                <li><a href="#">Guias</a></li>
-                <li><a href="#">Acceder</a></li>
-        </ul>
-      </div>
-    </header>
-    <main class="index-main">
-      <div class="index-contenedor-buscador">
-        <div class="index-contenedor-fondo">
-          <img
-            src="./assets/images/paredonesdeyala.jpg"
-            alt="Imagen de Fondo"
-          />
-        </div>
-        <h1>Bienvenidos a ......</h1>
-        <h3>Tu mejor destino</h3>
-        <!-- Formulario de búsqueda -->
-        <form id="index-formulario-busqueda" >
-          <input
-            type="text"
-            id="index-input-busqueda"
-            name="que"
-            placeholder="¿Qué estás buscando?"
-          />
-          <button type="button" id="index-buscar-puntos">
-            <img
-              src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"
-              alt="Buscar"
-            />
-          </button>
-        </form>
-      </div>
-      <div id="index-contenedor-resultados"></div>
-    </main>
-    <footer>
-      <div class="footer-primer-contenedor">
-        <img src="https://i.ibb.co/hcxRSj9/Index-png.png" alt="Logo de la pagina" />
-        <form id="form-subscribete">
-          <input
-            type="email"
-            id="footer-text-subscribir"
-            name="subcribete"
-            placeholder="Correo Electronico"
-            required
-          />
-          <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
-        </form>
-      </div>
-      <div class="footer-segundo-contenedor">
-        <h4>Contacto</h4>
-        <ul class="footer-contacto">
-          <li>WhatsApp: +543885273263</li>
-          <li>Correo:  bdidominguez@gmail.com</li>
-        </ul>
-        <h4>Redes Sociales</h4>
-        <ul class="footer-redes-sociales">
-          <li>linkedin</li>
-          <li>Youtube</li>
-          <li>Facebook</li>
-          <li>Instagram</li>
-        </ul>
-      </div>
-    </footer>
-  </body>
-  
+      <h1>
+        <i class="fas fa-map-marked-alt"></i> Bienvenidos a ......
+      </h1>
+      <h3>Tu mejor destino</h3>
+      <!-- Formulario de búsqueda -->
+      <form id="index-formulario-busqueda">
+        <input type="text" id="index-input-busqueda" name="que" placeholder="¿Qué estás buscando?" />
+        <button type="button" id="index-buscar-puntos">
+          <img src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png" alt="Buscar" />
+        </button>
+      </form>
+    </div>
+    <div id="index-contenedor-resultados"></div>
+  </main>
+  <footer>
+    <div class="footer-primer-contenedor">
+      <img src="https://i.ibb.co/hcxRSj9/Index-png.png" alt="Logo de la pagina" />
+      <form id="form-subscribete">
+        <input type="email" id="footer-text-subscribir" name="subcribete" placeholder="Correo Electronico" required />
+        <button type="button" id="footer-boton-suscriptor">Subcribirse</button>
+      </form>
+    </div>
+    <div class="footer-segundo-contenedor">
+      <h4>Contacto</h4>
+      <ul class="footer-contacto">
+        <li>WhatsApp: +543885273263</li>
+        <li>Correo: bdidominguez@gmail.com</li>
+      </ul>
+      <h4>Redes Sociales</h4>
+      <ul class="footer-redes-sociales">
+        <li>LinkedIn</li>
+        <li>YouTube</li>
+        <li>Facebook</li>
+        <li>Instagram</li>
+      </ul>
+    </div>
+  </footer>
+</body>
 </html>
