--- a/pages/guias.html
+++ b/pages/guias.html
@@ -3,9 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/styles.css" />
+  <script src="../assets/js/header.js" defer></script> <!-- Script para cargar el header -->
   <title>Turismo ─ Guías Turísticos</title>
 </head>
 <body>
+</head>
+<body>
+  <header>
+    <div class="contenedor-imagen-header">
+      <img
+        src="./assets/images/cerrode7colores.jpg"
+        alt="Logo de la Pagina"
+      />
+    </div>
+    <div class="contenedor-link-header">
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+              <li><a href="./pages/turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
+              <li><a href="./pages/registrar.html">Registrar</a></li> <!-- Cambiado aquí -->
+              <li><a href="./pages/guias.html">Guias</a></li>   
+              <li><a href="./pages/restaurantes.html">Restaurantes</a></li>             
+              <li><a href="./pages/acceder.html">Acceder</a></li>
+      </ul>
+    </div>
+  </header>
   <main>
     <!-- section guias -->
     <section>
