--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/css/styles.css" />
-  <script src="./assets/js/header.js" defer></script> <!-- Script para cargar el header -->
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+  <script src="./assets/js/header.js" defer></script> <!--   Script para cargar el header -->
   <script src="./assets/js/index.js" type="module" defer></script> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
   <title>Document</title>
