copie todo los cambios que vi desde el Repo Adriana a Adriana-con-login

--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -1,67 +1,138 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="../assets/css/styles.css" >
     <script src="../assets/js/registrar.js" type="module"></script> 
     <title>Alta de Usuario Nuevo</title>
   </head>
   <body>
+    <header>
+      <div class="contenedor-imagen-header">
+        <img src="../assets/images/icon/logo.png" alt="Logo de la Pagina">
+      </div>
+      <label class="header-icono-hamburguesa" for="header-menu-hamburguesa"><img src="../assets/images/icon/menu.png" alt="Icono Menu Hamburguesa"></label>
+      <input type="checkbox" id="header-menu-hamburguesa">
+      <nav class="contenedor-link-header">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="./turismo.html">Turismo</a></li>
+          <li><a href="./restaurantes.html">Restaurantes</a></li>
+          <li><a href="./guias.html">Guias</a></li>
+          <li><a href="./acceder.html">Acceder</a></li>
+          <li><a href="./registrar.html">Registrar</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <div class="registrar-contenedor-buscador">
-        <!-- <a href="https://ibb.co/8MPLpzp"><img src="https://i.ibb.co/8MPLpzp/imagen.jpg" alt="imagen" border="0"></a> -->
-
-        <h2>Registro de Usuario</h2>
-        <form
-          class="registro-formulario"
-          id="formulario-de-registro"
-          enctype="multipart/form-data"
-        >
-          <div>
-            <label for="registro-foto-perfil">Foto de Perfil:</label>
-            <input
-              type="file"
-              id="registro-foto-perfil"
-              name="photo"
-            />
-            <img
-              id="registro-foto-actual"
-              src="https://i.ibb.co/8MPLpzp/imagen.jpg"
-              alt="Preview de la imagen"
-              style="max-width: 200px; margin-top: 10px"
-            />
+      <div class="registrar-contenedor-furmulario">
+        <form class="registro-formulario" id="formulario-de-registro" enctype="multipart/form-data">
+          <h2>Registro de nuevo usuario</h2>
+          <div class="registrar-foto-perfil">
+            <img id="registrar-foto-actual" src="https://i.ibb.co/8MPLpzp/imagen.jpg" alt="Preview de la imagen">
+            <label class="input-formulario-file-label" for="registrar-foto-perfil">Cambiar Foto</label>
+            <input class="input-formulario-file" type="file" id="registrar-foto-perfil" name="photo">
           </div>
-          <div>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="registro-nombre" name="nombre" required />
+          <div class="input-formulario">
+            <label for="registrar-correo">Correo:</label>
+            <input type="email" id="registrar-correo" name="correo" required >
           </div>
-          <div>
-            <label for="apellido">Apellido:</label>
-            <input type="text" id="registro-apellido" name="apellido" required />
+          <div class="input-formulario">
+            <label for="registrar-dni">DNI:</label>
+            <input type="text" id="registrar-dni" name="dni" required >
           </div>
-          <div>
-            <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-            <input type="date" id="registro-fecha-nacimiento" name="fechaNacimiento" required />
+          <div class="input-formulario">
+            <label for="registrar-nombre">Nombre:</label>
+            <input type="text" id="registrar-nombre" name="nombre" required >
           </div>
-          <div>
-            <label for="nombreUsuario">Nombre de Usuario:</label>
-            <input type="text" id="registro-nombre-usuario" name="nombreUsuario" required />
+          <div class="input-formulario">
+            <label for="registrar-apellido">Apellido:</label>
+            <input type="text" id="registrar-apellido" name="apellido" required >
           </div>
-          <div>
-            <label for="clave">Clave:</label>
-            <input type="password" id="registro-clave" name="clave" required />
+          <div class="input-formulario">
+            <label for="registrar-fecha-nacimiento">Fecha de Nacimiento:</label>
+            <input type="date" id="registrar-fecha-nacimiento" name="fechaNacimiento" required>
           </div>
-          <div>
-            <label for="confirmarClave">Confirmar Clave:</label>
-            <input type="password" id="registro-confirmar-clave" name="confirmarClave" required />
+          <div class="input-formulario">
+            <label for="registrar-nombre-usuario">Nombre de Usuario:</label>
+            <input type="text" id="registrar-nombre-usuario" name="nombreUsuario" required >
           </div>
-          <div>
-            <button type="submit">Registrar</button>
+          <div class="input-formulario">
+            <label for="registrar-clave">Clave:</label>
+            <input type="password" id="registrar-clave" name="clave" required >
+          </div>
+          <div class="input-formulario">
+            <label for="registrar-confirmar-clave">Confirmar Clave:</label>
+            <input type="password" id="registrar-confirmar-clave" name="confirmarClave" required >
+          </div>
+          <div class="formulario-boton-acciones">
+            <div class="formulario-terminos-condiciones">
+              <input type="checkbox" name="checkbox" id="registrar-formulario-checkbox">
+              <p>Estoy de acuerdo con los terminos y condiciones</p>
+              <a href="./enconstruccion.html" target="_blank" rel="noopener noreferrer">Terminos y condiciones</a>
+            </div>
+            <button class="botones-formularios " type="button" id="registrar-boton-cargar">Registrar</button>
+            <a href="./acceder.html">Ya tengo una cuenta!</a>
           </div>
         </form>
       </div>
     </main>
-    <!-- <script src="../assets/js/dario.js"></script> -->
+    <footer>
+      <div class="footer-primer-contenedor">
+        <img src="../assets/images/icon/logo.png" alt="Logo de la pagina" >
+        <form id="form-subscribete">
+          <input
+            type="email"
+            id="footer-text-subscribir"
+            name="subcribete"
+            placeholder="Correo Electronico"
+            required
+          >
+          <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
+        </form>
+      </div>
+      <div class="footer-segundo-contenedor">
+        <h4>Contacto</h4>
+        <ul class="footer-contacto">
+          <li>
+            <a href="https://wa.me/543885273263" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/whatsapp.png" alt="WhatsApp">  +543885273263
+            </a>
+            
+          </li>
+          <li>
+            <a href="mailto:bdidominguez@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/gmail.png" alt="Correo">  bdidominguez@gmail.com
+            </a>
+          </li>
+        </ul>
+        <h4>Redes Sociales</h4>
+        <ul class="footer-redes-sociales">
+          <li>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/linkedin.png" alt="LinkedIn">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/youtube.png" alt="YouTube">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/facebook.png" alt="Facebook">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/instagram.png" alt="Instagram">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    
   </body>
 </html>
+
