--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="./assets/css/styles.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
     <script src="./assets/js/index.js" type="module"></script>  
     <title>Document</title>
   </head>
   <body>
     <header>
       <div class="contenedor-imagen-header">
-        <img
-          src="./assets/images/cerrode7colores.jpg"
-          alt="Logo de la Pagina"
-        />
+        <img src="./assets/images/icon/logo.png" alt="Logo de la Pagina">
       </div>
-      <div class="contenedor-link-header">
+      <label class="header-icono-hamburguesa" for="header-menu-hamburguesa"><img src="./assets/images/icon/menu.png" alt="Icono Menu Hamburguesa"></label>
+      <input type="checkbox" id="header-menu-hamburguesa">
+      <nav class="contenedor-link-header">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/turismo.html">Turismo</a></li> <!-- Cambiado aquí -->
-                <li><a href="./pages/registrar.html">Registrar</a></li> <!-- Cambiado aquí -->
-                <li><a href="./pages/guias.html">Guias</a></li>   
-                <li><a href="./pages/restaurantes.html">Restaurantes</a></li>             
-                <li><a href="./pages/acceder.html">Acceder</a></li>
+          <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
+          <li><a href="./pages/turismo.html"><i class="fas fa-map-marked-alt"></i> Turismo</a></li>
+          <li><a href="./pages/restaurantes.html"><i class="fas fa-utensils"></i> Restaurantes</a></li>
+          <li><a href="./pages/guias.html"><i class="fas fa-users"></i> Guias</a></li>
+          <li><a href="./pages/acceder.html"><i class="fas fa-sign-in-alt"></i> Acceder</a></li>
+          <li><a href="./pages/registrar.html"><i class="fas fa-user-plus"></i> Registrar</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <main class="index-main">
       <div class="index-contenedor-buscador">
@@ -32,12 +32,9 @@
           <img
             src="./assets/images/paredonesdeyala.jpg"
             alt="Imagen de Fondo"
-          />
+          >
         </div>
-
-        
-        <h1>Bienvenidos a ......</h1>
-        <h3>Tu mejor destino</h3>
+        <h3>Busca tu destino</h3>
         <!-- Formulario de búsqueda -->
         <form id="index-formulario-busqueda" >
           <input
@@ -45,12 +42,12 @@
             id="index-input-busqueda"
             name="que"
             placeholder="¿Qué estás buscando?"
-          />
+          >
           <button type="button" id="index-buscar-puntos">
             <img
               src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"
               alt="Buscar"
-            />
+            >
           </button>
         </form>
       </div>
@@ -58,7 +55,7 @@
     </main>
     <footer>
       <div class="footer-primer-contenedor">
-        <img src="https://i.ibb.co/hcxRSj9/Index-png.png" alt="Logo de la pagina" />
+        <img src="./assets/images/icon/logo.png" alt="Logo de la pagina" >
         <form id="form-subscribete">
           <input
             type="email"
@@ -66,22 +63,46 @@
             name="subcribete"
             placeholder="Correo Electronico"
             required
-          />
+          >
           <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
         </form>
       </div>
       <div class="footer-segundo-contenedor">
         <h4>Contacto</h4>
         <ul class="footer-contacto">
-          <li>WhatsApp: +543885273263</li>
-          <li>Correo:  bdidominguez@gmail.com</li>
+          <li>
+            <a href="https://wa.me/543885273263" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/whatsapp.png" alt="WhatsApp">  +543885273263
+            </a>
+          </li>
+          <li>
+            <a href="mailto:bdidominguez@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/gmail.png" alt="Correo">  bdidominguez@gmail.com
+            </a>
+          </li>
         </ul>
         <h4>Redes Sociales</h4>
         <ul class="footer-redes-sociales">
-          <li>linkedin</li>
-          <li>Youtube</li>
-          <li>Facebook</li>
-          <li>Instagram</li>
+          <li>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/linkedin.png" alt="LinkedIn">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/youtube.png" alt="YouTube">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/facebook.png" alt="Facebook">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/icon/instagram.png" alt="Instagram">
+            </a>
+          </li>
         </ul>
       </div>
     </footer>
