creo ya estaria todo ahora a ver que anda y que no

--- a/pages/acceder.html
+++ b/pages/acceder.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
     <script src="../assets/js/acceder.js" type="module"></script>
     <title>Acceder</title>
   </head>
   <body>
     <header>
       <div class="contenedor-imagen-header">
-        <img src="../assets/images/cerrode7colores.jpg" alt="Logo de la Pagina" />
+        <img src="../assets/images/icon/logo.png" alt="Logo de la Pagina">
       </div>
-      <div class="contenedor-link-header">
+      <label class="header-icono-hamburguesa" for="header-menu-hamburguesa"><img src="../assets/images/icon/menu.png" alt="Icono Menu Hamburguesa"></label>
+      <input type="checkbox" id="header-menu-hamburguesa">
+      <nav class="contenedor-link-header">
         <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./turismo.html">Cuentanos!</a></li>
-          <li><a href="./guias.html">Guias</a></li>
-          <li><a href="./acceder.html">Acceder</a></li>
-          <li><a href="./registrar.html">Registrar</a></li>
+          <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
+          <li><a href="./turismo.html"><i class="fas fa-map-marked-alt"></i> Turismo</a></li>
+          <li><a href="./restaurantes.html"><i class="fas fa-utensils"></i> Restaurantes</a></li>
+          <li><a href="./guias.html"><i class="fas fa-users"></i> Guias</a></li>
+          <li><a href="./acceder.html"><i class="fas fa-sign-in-alt"></i> Acceder</a></li>
+          <li><a href="./registrar.html"><i class="fas fa-user-plus"></i> Registrar</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <main>
       <div class="acceder-contenedor-formulario">
@@ -43,7 +47,7 @@
     </main>
     <footer>
       <div class="footer-primer-contenedor">
-        <img src="https://i.ibb.co/hcxRSj9/Index-png.png" alt="Logo de la pagina" />
+        <img src="../assets/images/icon/logo.png" alt="Logo de la pagina" >
         <form id="form-subscribete">
           <input
             type="email"
@@ -51,22 +55,47 @@
             name="subcribete"
             placeholder="Correo Electronico"
             required
-          />
-          <button type="button" id="footer-boton-suscriptor">Subcribirse</button>
+          >
+          <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
         </form>
       </div>
       <div class="footer-segundo-contenedor">
         <h4>Contacto</h4>
         <ul class="footer-contacto">
-          <li>WhatsApp: +543885273263</li>
-          <li>Correo: bdidominguez@gmail.com</li>
+          <li>
+            <a href="https://wa.me/543885273263" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/whatsapp.png" alt="WhatsApp">  +543885273263
+            </a>
+            
+          </li>
+          <li>
+            <a href="mailto:bdidominguez@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/gmail.png" alt="Correo">  bdidominguez@gmail.com
+            </a>
+          </li>
         </ul>
         <h4>Redes Sociales</h4>
         <ul class="footer-redes-sociales">
-          <li>LinkedIn</li>
-          <li>YouTube</li>
-          <li>Facebook</li>
-          <li>Instagram</li>
+          <li>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/linkedin.png" alt="LinkedIn">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/youtube.png" alt="YouTube">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/facebook.png" alt="Facebook">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/instagram.png" alt="Instagram">
+            </a>
+          </li>
         </ul>
       </div>
     </footer>
