--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="../assets/css/styles.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
     <script src="../assets/js/registrar.js" type="module"></script> 
     <title>Alta de Usuario Nuevo</title>
   </head>
@@ -16,12 +17,12 @@
       <input type="checkbox" id="header-menu-hamburguesa">
       <nav class="contenedor-link-header">
         <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./turismo.html">Turismo</a></li>
-          <li><a href="./restaurantes.html">Restaurantes</a></li>
-          <li><a href="./guias.html">Guias</a></li>
-          <li><a href="./acceder.html">Acceder</a></li>
-          <li><a href="./registrar.html">Registrar</a></li>
+          <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
+          <li><a href="./turismo.html"><i class="fas fa-map-marked-alt"></i> Turismo</a></li>
+          <li><a href="./restaurantes.html"><i class="fas fa-utensils"></i> Restaurantes</a></li>
+          <li><a href="./guias.html"><i class="fas fa-users"></i> Guias</a></li>
+          <li><a href="./acceder.html"><i class="fas fa-sign-in-alt"></i> Acceder</a></li>
+          <li><a href="./registrar.html"><i class="fas fa-user-plus"></i> Registrar</a></li>
         </ul>
       </nav>
     </header>
