--- a/pages/restaurantes.html
+++ b/pages/restaurantes.html
@@ -4,10 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurantes ─ Turismo</title>
-  <link rel="stylesheet" href="/assets/css/restaurantes.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    <!-- inicio de formulario de búsqueda -->
+  <header>
+    <div class="contenedor-imagen-header">
+      <img src="../assets/images/icon/logo.png" alt="Logo de la Pagina">
+    </div>
+    <label class="header-icono-hamburguesa" for="header-menu-hamburguesa"><img src="../assets/images/icon/menu.png" alt="Icono Menu Hamburguesa"></label>
+    <input type="checkbox" id="header-menu-hamburguesa">
+    <nav class="contenedor-link-header">
+      <ul>
+        <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
+        <li><a href="./turismo.html"><i class="fas fa-map-marked-alt"></i> Turismo</a></li>
+        <li><a href="./restaurantes.html"><i class="fas fa-utensils"></i> Restaurantes</a></li>
+        <li><a href="./guias.html"><i class="fas fa-users"></i> Guias</a></li>
+        <li><a href="./acceder.html"><i class="fas fa-sign-in-alt"></i> Acceder</a></li>
+        <li><a href="./registrar.html"><i class="fas fa-user-plus"></i> Registrar</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!-- inicio de formulario de búsqueda -->
     <section class="contenedor">
       <h1>Restaurantes en .....</h1>
       <div class="sombra pdg-18 card-resto">
@@ -139,7 +158,7 @@
       <div class="sombra mgb-20 pdg-18 card-resto">
         <div class="restaurante-info">
           <div>
-            <img class="imagen-restaurante" src="/assets/images/restaurants/vive-cafe_1.jpg" alt="Vive Café Buenos Aires">
+            <img class="imagen-restaurante" src="../assets/images/restaurants/vive-cafe.jpg" alt="Vive Café Buenos Aires">
           </div>
           <div class="descripcion-restaurante">
             <a class="nombre-restaurant" href="#">Vive Café</a>
@@ -197,5 +216,59 @@
       </div>
     </main>
     <!-- fin de tarjetas restaurantes -->
+    <footer>
+      <div class="footer-primer-contenedor">
+        <img src="../assets/images/icon/logo.png" alt="Logo de la pagina" >
+        <form id="form-subscribete">
+          <input
+            type="email"
+            id="footer-text-subscribir"
+            name="subcribete"
+            placeholder="Correo Electronico"
+            required
+          >
+          <button type="button"  id="footer-boton-suscriptor">Subcribirse</button>
+        </form>
+      </div>
+      <div class="footer-segundo-contenedor">
+        <h4>Contacto</h4>
+        <ul class="footer-contacto">
+          <li>
+            <a href="https://wa.me/543885273263" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/whatsapp.png" alt="WhatsApp">  +543885273263
+            </a>
+            
+          </li>
+          <li>
+            <a href="mailto:bdidominguez@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/gmail.png" alt="Correo">  bdidominguez@gmail.com
+            </a>
+          </li>
+        </ul>
+        <h4>Redes Sociales</h4>
+        <ul class="footer-redes-sociales">
+          <li>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/linkedin.png" alt="LinkedIn">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/youtube.png" alt="YouTube">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/facebook.png" alt="Facebook">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+              <img src="../assets/images/icon/instagram.png" alt="Instagram">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 </body>
 </html>
