agregue animacion y corregi la pagina Turismos.html y su js

--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -122,6 +122,6 @@
           </ul>
         </div>
       </footer>
-    <script src="../assets/js/adriana.js" defer></script> <!-- Usar defer para cargar después del DOM -->
+    <script src="../assets/js/adriana.js" type="module" defer></script> <!-- Usar defer para cargar después del DOM /// y te falto poner type="module" para que te deje importar las funciones -->
 </body>
 </html>
