--- a/pages/restaurantes.html
+++ b/pages/restaurantes.html
@@ -6,6 +6,7 @@
   <title>Restaurantes ─ Turismo</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS --> 
   <link rel="stylesheet" href="../assets/css/styles.css">
+  <script src="../assets/js/restaurantes.js" type="module"></script>
 </head>
 <body>
   <header>
