cambios en adriana que se pueden perder

--- a/pages/acceder.html
+++ b/pages/acceder.html
@@ -26,7 +26,8 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <!--<main>-->
+    <main class="acceder-turismo"> 
       <div class="acceder-contenedor-formulario">
         <form class="acceder-formulario" id="formulario-de-acceso">
           <h2>Acceder</h2>
@@ -38,6 +39,7 @@
             <input type="password" id="acceder-clave" name="clave" required />
             <label for="acceder-clave">Clave:</label>
           </div>
+          <div id="mensaje"></div> <!-- Contenedor para el mensaje -->
           <div class="formulario-boton-acciones">
             <button class="botones-formularios" type="button" id="acceder-boton">Acceder</button>
             <a href="./registrar.html">Registrar</a>
