Corrigiendo responcividad de paginas index, registrar

--- a/index.html
+++ b/index.html
@@ -37,17 +37,9 @@
         <h3>Busca tu destino</h3>
         <!-- Formulario de búsqueda -->
         <form id="index-formulario-busqueda" >
-          <input
-            type="text"
-            id="index-input-busqueda"
-            name="que"
-            placeholder="¿Qué estás buscando?"
-          >
+          <input type="text" id="index-input-busqueda" name="que" placeholder="¿Qué estás buscando?" >
           <button type="button" id="index-buscar-puntos">
-            <img
-              src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"
-              alt="Buscar"
-            >
+            <img src="https://www.gstatic.com/images/icons/material/system/1x/search_black_24dp.png"  alt="Buscar">
           </button>
         </form>
       </div>
