--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -32,7 +32,7 @@
           <h2>Registro de nuevo usuario</h2>
           <div class="registrar-foto-perfil">
             <img id="registrar-foto-actual" src="https://i.ibb.co/8MPLpzp/imagen.jpg" alt="Preview de la imagen">
-            <label class="input-formulario-file-label" for="registrar-foto-perfil">Cambiar Foto</label>
+            <label id="registrar-label-imput"  class="input-formulario-file-label" for="registrar-foto-perfil">Cambiar Foto</label>
             <input class="input-formulario-file" type="file" id="registrar-foto-perfil" name="photo">
           </div>
           <div class="input-formulario">
