mejorado el contenedor de filtro-guias

--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -25,6 +25,7 @@
             </ul>
         </nav>
     </header>
+    
     <div class="turismo-formulario">
         <div class="container">
             <h1>Contanos tu experiencia</h1>
@@ -55,8 +56,10 @@
 
                 <button type="button" id="guardarDatos">Guardar Datos</button>
             </form>
+        
         </div>
         <div id="contenedor-puntos"></div>
+        <div id="mensaje"></div> <!-- Contenedor para el mensaje -->
     </div>
     <footer>
         <div class="footer-primer-contenedor">
