--- a/pages/guias.html
+++ b/pages/guias.html
@@ -98,6 +98,7 @@
     </section>
   </main>
   <footer>
+    <div id="mensaje"></div> <!-- Contenedor para el mensaje -->
     <div class="footer-primer-contenedor">
       <img src="../assets/images/icon/logo.png" alt="Logo de la pagina">
       <form id="form-subscribete">
@@ -119,6 +120,7 @@
         <li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><img src="../assets/images/icon/instagram.png" alt="Instagram"></a></li>
       </ul>
     </div>
+    
   </footer>
 </body>
 </html>
